# vier_gewinnt_semster_02

./: .gitignore  CMakeLists.txt  README.md
examples/: demo_vierGewinnt.cpp  main.cpp  main2.cpp
extra/: client.py  server.py
include/: Spielbrett.hpp  Spieler.hpp  lobby.hpp
src/: Spielbrett.cpp  Spieler.cpp  lobby.cpp  lobby.hpp
test/: Spielertest.cpp  testSpielbrett.cpp
